# hicat-spatial

./: README.md  tutorial.md
HiCAT_package/: LICENSE  NOTICE  README.md  UNI_2_spot.py  environment.yml  environment_legacy.yml  pyproject.toml  rank_genes_groups.py
HiCAT_package/hicat/: __init__.py  anchor_detection.py  core.py  data.py  determine_clustering_config.py  heterogeneity.py  hier_feature_selection.py  label_assignment.py  label_transfer.py  main.py  multi_modal_integration.py  query_clustering.py  reference_selection.py  tree_inference.py  utils.py
HiCAT_package/hicat/pipelines/: _io.py  step1_preprocessing.py  step2_tree_inference.py  step3_reference_selection.py  step4_hierarchical_features.py  step5_clustering_config.py  step6_label_transfer.py  step7_heterogeneity.py
HiCAT_package/hicat/preprocessing/: __init__.py  extract_scribble_annotations.py  gene_enhancement.py  image_features.py  image_utils.py  preprocess_util.py
HiCAT_package/hicat/preprocessing/hipt/: __init__.py  hipt_2_spot.py  image.py  model_utils.py  preprocess.py  tissue_mask.py  utils.py  vision_transformer4k.py  visual.py  wrapper.py
HiCAT_package/hicat/preprocessing/hipt/checkpoints/: README.md
HiCAT_package/hicat/preprocessing/uni/: __init__.py  preprocess.py  uni_2_spot.py
HiCAT_package/hicat/preprocessing/uni/checkpoints/vit_large_patch16_224.dinov2.uni_mass100k/: README.md
HiCAT_package/hicat/preprocessing/uni/histosweep_vendor/: requirements.txt
HiCAT_package/hicat/preprocessing/uni/histosweep_vendor/HistoSweep/: Run_HistoSweep.ipynb  __init__.py  preprocess.py  rescale.py  utils.py
HiCAT_package/hicat_spatial/: __init__.py  anchor_detection.py  core.py  data.py  determine_clustering_config.py  heterogeneity.py  hier_feature_selection.py  label_assignment.py  label_transfer.py  main.py  multi_modal_integration.py  query_clustering.py  tree_inference.py  utils.py  visualization.py
HiCAT_package/hicat_spatial/pipelines/: __init__.py  step1_preprocessing.py  step2_tree_inference.py  step3_reference_selection.py  step4_hierarchical_features.py  step5_clustering_config.py  step6_label_transfer.py  step7_heterogeneity.py
HiCAT_package/hicat_spatial/preprocessing/: README.md  __init__.py  extract_scribble_annotations.py  gene_enhancement.py  image_features.py  image_utils.py  preprocess_util.py
HiCAT_package/hicat_spatial/preprocessing/hipt/: __init__.py  extract_features.py  heatmap_utils.py  hipt_2_spot.py  hipt_4k.py  model_utils.py  vision_transformer.py
HiCAT_package/hicat_spatial/preprocessing/hipt/checkpoints/: README.md
HiCAT_package/hicat_spatial/preprocessing/uni/: __init__.py  extract_features.py  histosweep.py  wrapper.py
HiCAT_package/hicat_spatial/preprocessing/uni/checkpoints/vit_large_patch16_224.dinov2.uni_mass100k/: README.md
HiCAT_package/hicat_spatial/preprocessing/uni/histosweep_vendor/: README.md  __init__.py
HiCAT_package/hicat_spatial/preprocessing/uni/histosweep_vendor/HistoSweep/: README.md  additionalPlots.py  computeMetrics.py  computeMetrics_original.py  generateMask.py  saveParameters.py  textureAnalysis.py
scripts/: download_hipt_checkpoints.sh  download_uni_checkpoints.sh
tutorial/: download_hipt_checkpoints.sh  download_uni_checkpoints.sh  label_transfer_manual_mode.md  tutorial.md
tutorial_results/01_preprocessing/: stage_config.json
tutorial_results/02_tree_inference/: integrated_dists.csv  integrated_ranks.csv  stage_config.json  tree_inference_result.pkl  tree_split_table.csv  tree_structure.txt
tutorial_results/03_reference_selection/: reference_selection_summary.csv  selected_references.json  stage_config.json
tutorial_results/03_reference_selection/H2/: selection_summary.csv  similarity_summary.csv
tutorial_results/04_hierarchical_features/: feature_summary.csv  hierarchical_feature_result.pkl  selected_references.json  stage_config.json
tutorial_results/05_clustering_config/: clustering_config_stage_result.pkl  clustering_config_summary.csv  stage_config.json
tutorial_results/06_label_transfer/: stage_config.json
tutorial_results/06_label_transfer/H2/: final_labels.csv  final_predicted_obs.csv  round_summary.csv
tutorial_results/06_label_transfer/H2/single_ref_nn/: predicted_obs.csv
tutorial_results/07_heterogeneity/: heterogeneity_result.pkl  stage_config.json
tutorial_results/07_heterogeneity/heterogeneous_scores/: heterogeneity_summary.csv  marker_stability_summary.csv  permutation_silhouette_summary.csv  selected_region_scores.csv  selected_regions.json
