[project]
name = "hicat-spatial"
version = "0.1.0"
description = "HiCAT: hierarchical cohort-scale annotation transfer for spatial omics data"
readme = "README.md"
requires-python = ">=3.9,<3.12"
authors = [
    { name = "Jing Huang" }
]
license = { text = "MIT" }
keywords = [
    "multimodal spatial omics",
    "spatial transcriptomics",
    "pathologist annotation",
    "label transfer",
    "intra-sample heterogeneity",
    "hierarchical annotation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.0,<2.4",
    "scipy>=1.11,<1.12",
    "scikit-learn>=1.3,<1.8",
    "scanpy[leiden]>=1.9.6,<1.10",
    "anndata>=0.10,<0.11",
    "leidenalg>=0.10.2,<0.11",
    "igraph>=0.10.8,<0.11",
    "pynndescent>=0.5.11,<0.6",
    "umap-learn>=0.5.5,<0.6",
    "matplotlib>=3.8,<3.9",
    "seaborn>=0.13,<0.14",
    "networkx>=3.2,<3.3",
    "hnswlib>=0.8,<0.9",
    "bigtree>=0.19,<0.20"
]

[project.optional-dependencies]
image = [
    "opencv-python>=4.8,<4.11",
    "Pillow>=10.1,<11",
    "torch>=2.4,<2.5",
    "torchvision>=0.19,<0.20",
    "timm>=1.0,<1.1",
    "scikit-image>=0.23,<0.24",
    "h5py>=3.10,<3.11",
    "webdataset>=1.0,<1.1",
    "einops>=0.8,<0.9",
    "tqdm>=4.66,<5",
    "psutil>=6.0,<7",
    "tifffile>=2024.5,<2025",
    "requests>=2.31,<3",
    "brokenaxes>=0.6,<0.7"
]

dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "build",
]

notebook = [
    "jupyterlab",
    "ipykernel"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hicat_spatial*"]

[tool.setuptools.package-data]
"hicat_spatial.preprocessing.uni.histosweep_vendor" = [
    "LICENSE.txt",
    "README.md",
    "requirements.txt",
    "HistoSweep/README.md",
]
"hicat_spatial" = [
    "preprocessing/README.md",
    "preprocessing/hipt/checkpoints/README.md",
    "preprocessing/uni/checkpoints/vit_large_patch16_224.dinov2.uni_mass100k/README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [
    "hicat_spatial/preprocessing/hipt",
    "hicat_spatial/preprocessing/uni",
]

[tool.ruff.lint]
# Start CI with correctness-focused checks. Formatting the historical analysis
# modules is intentionally deferred to a separate, reviewable change.
select = ["F"]
